--- a/src/index.html
+++ b/src/index.html
@@ -696,16 +696,264 @@
                     </div>
                 </div>
                 <!-- 右边的区域 -->
-                <div class="carousel_r fr">
-                    <ul class="banner">
-                        <li><img src="./img/carousel_1.jpg" alt=""></li>
-                        <li><img src="./img/carousel_2.jpg" alt=""></li>
-                        <li><img src="./img/carousel_3.jpg" alt=""></li>
-                        <li><img src="./img/carousel_4.jpg" alt=""></li>
-                        <li><img src="./img/carousel_5.jpg" alt=""></li>
-                        <li><img src="./img/carousel_6.jpg" alt=""></li>
+                <div class="carousel_r fr clearfix">
+                    <!-- 轮播区域 -->
+                    <div class="banner">
+                        <!-- 轮播 -->
+                        <ul>
+                            <li><img src="./img/carousel_1.jpg" alt=""></li>
+                            <li><img src="./img/carousel_2.jpg" alt=""></li>
+                            <li><img src="./img/carousel_3.jpg" alt=""></li>
+                            <li><img src="./img/carousel_4.jpg" alt=""></li>
+                            <li><img src="./img/carousel_5.jpg" alt=""></li>
+                            <li><img src="./img/carousel_6.jpg" alt=""></li>
+                        </ul>
+                        <!-- 左右按钮 -->
+                        <div class="banner_btn clearfix">
+                            <span class="fl"><</span>
+                            <span class="fr">></span>
+                        </div>
+                        <!-- 下面显示栏 -->
+                        <div class="banner_show clearfix">
+                            <span>12元封顶折上再8折</span>
+                            <span>5年精选折上8折</span>
+                            <span>世界名著·多雷插图版</span>
+                            <span>知识的种子</span>
+                            <span>古希腊阿提卡演说家合辑</span>
+                            <span>牛津少年百科全书</span>
+                        </div>
+                    </div>
+                    <!-- 热书区域 -->
+                    <div class="hotbook fl">
+                        <!-- 导航区域 -->
+                        <ul class="hot_ban clearfix">
+                            <li>新品特惠</li>
+                            <li>本周精选</li>
+                            <li>新书速递</li>
+                            <li>读者热评</li>
+                        </ul>
+                        <!-- 显示区域 -->
+                        <div class="hot_show">
+                            <!-- 上部分 -->
+                            <div class="hot_show_t clearfix">
+                                <a href="#" class="fl">
+                                    <img src="./img/01.jpg" alt="">
+                                </a>
+                                <div class="fl">
+                                    <!-- 标题 -->
+                                    <a href="#">以欢喜心过生活-汪曾祺作品精选集·手绘彩插珍藏版</a>
+                                    <!-- 价格 -->
+                                    <p>
+                                        <span>¥14.8</span>
+                                        <span>¥32.8</span>
+                                    </p>
+                                    <!-- 描述介绍 -->
+                                    <div>
+                                        汪曾祺散文精选本以花草虫鱼、山川风物、美食行走为主题，由专家选编，选目精良、装帧雅致，内插作者手绘彩图。汪曾祺被誉为“抒情的人道主义者”，其作品自成一格，天真隽永，自在风流。他的小说有风俗画的特色，而他的散文颇丰，如行云流永，深得自然之旨，其文有原汁原味的“本色艺术”，创造真境界，传达真感情，引领人们到达精神世界的净土。
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- 下部分 -->
+                            <ul class="hot_show_b clearfix">
+                                <li>
+                                    <a href="#"><img src="./img/02.jpg" alt=""></a>
+                                    <a href="#">克里特岛迷宫:希腊罗马神话起源之谜/英国神话学专著</a>
+                                    <p>
+                                        <span>￥11.9</span>
+                                        <span>￥39.8</span>
+                                    </p>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="./img/03.jpg" alt=""></a>
+                                    <a href="#">美术的故事/图史结合视觉表象下的深层内涵艺术史著作</a>
+                                    <p>
+                                        <span>￥7.2</span>
+                                        <span>￥24.0</span>
+                                    </p>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="./img/04.jpg" alt=""></a>
+                                    <a href="#">神圣者的观念/开创宗教现象学回归人类生活神秘源头</a>
+                                    <p>
+                                        <span>￥30.6</span>
+                                        <span>￥68.0</span>
+                                    </p>
+                                </li>
+                                <li>
+                                    <a href="#"><img src="./img/05.jpg" alt=""></a>
+                                    <a href="#">民国文化隐者录/埋没在历史背后的钩沉探隐之魅力</a>
+                                    <p>
+                                        <span>￥19.6</span>
+                                        <span>￥28.0</span>
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- 畅销榜 -->
+                    <div class="sale fr">
+                        <!-- 标题 -->
+                        <h4 class="clearfix">
+                            <span class="fl">图书畅销榜</span>
+                            <a href="#" class="fr">更多>></a>
+                        </h4>
+                        <!-- 导航标题 -->
+                        <ul class="sale_ban clearfix">
+                            <li><a href="#">总榜</a></li>
+                            <li><a href="#">文学</a></li>
+                            <li><a href="#">社科</a></li>
+                            <li><a href="#">少儿</a></li>
+                        </ul>
+                        <!-- 列表内容 -->
+                        <div class="sale_content">
+                            <div>
+                                <span>01</span>
+                                <div class="sc_more clearfix">
+                                    <a href="#" class="fl">
+                                        <img src="./img/06.jpg" alt="">
+                                    </a>
+                                    <div class="fl">
+                                        <a href="#">无影灯:渡边淳一自选集</a>
+                                        <p>
+                                            <span>￥17.2</span>
+                                            <span>￥35.0</span>
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <span>02</span>
+                                中国昆虫图鉴
+                            </div>
+                            <div>
+                                <span>03</span>
+                                野果-托尔斯泰短片小说集
+                            </div>
+                            <div>
+                                <span>04</span>
+                                昨日重现
+                            </div>
+                            <div>
+                                <span>05</span>
+                                民国往事
+                            </div>
+                            <div>
+                                <span>06</span>
+                                怀抱鲜花的女人
+                            </div>
+                            <div>
+                                <span>07</span>
+                                蓝胡子魔王-幻想国大师彩
+                            </div>
+                            <div>
+                                <span>08</span>
+                                我们-反乌托邦小说系列
+                            </div>
+                            <div>
+                                <span>09</span>
+                                诗经密码：中国人的野性与
+                            </div>
+                            <div>
+                                <span>10</span>
+                                啊哈！
+                            </div>
+                        </div>
+                        <!-- 显示更多 -->
+                        <a href="#" class="fr">查看完整榜单>></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 三张小图片 -->
+        <div id="pic">
+            <div class="pic con clearfix">
+                <a href="#"><img src="./img/pic1.jpg" alt=""></a>
+                <a href="#"><img src="./img/pic2.jpg" alt=""></a>
+                <a href="#"><img src="./img/pic3.jpg" alt=""></a>
+            </div>
+        </div>
+        <!-- 淘书团热销 -->
+        <div id="team">
+            <div class="team con clearfix">
+                <!-- 标题 -->
+                <a href="#" class="clearfix">
+                    <span class="fl">淘书团热销 ></span>
+                    全场包邮，低至一折，每天上线
+                    <span class="fr">查看更多商品>></span>
+                </a>
+                <!-- 内容区域 -->
+                <div class="team_content">
+                    <ul class="clearfix">
+                        <li>
+                            <a href="#"><img src="./img/16.jpg" alt=""></a>
+                            <!-- 详情 -->
+                            <div>
+                                <a href="#">超低价！茅盾文学奖得主麦家谍战之作《刀尖》上下册，根据真实历史事件改编，耗时八年打造，讲述中共王牌特工金深水和林婴婴的传奇故</a>
+                                <p class="clearfix">
+                                    团购价:￥
+                                    <span>17.9</span>
+                                    <span>￥59.6</span>
+                                    <span class="fr">3.0折</span>
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/17.jpg" alt=""></a>
+                            <div>
+                                <a href="#">全彩插图本《战争论》精装全3册，被誉为影响世界历史进程的经典著作之一，由知名设计师未氓装帧设计，收录了zui全的拿破仑时代战役插</a>
+                                <p class="clearfix">
+                                    团购价:￥
+                                    <span>89.9</span>
+                                    <span>￥358.0</span>
+                                    <span class="fr">2.5折</span>
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/18.jpg" alt=""></a>
+                            <div>
+                                <a href="#">日本“科普读物元祖”——学研社金牌科普图鉴《学研图鉴》大16开精装2册，铜版纸精美印刷，13年畅销2,000,000册，日本亚马逊五星推</a>
+                                <p class="clearfix">
+                                    团购价:￥
+                                    <span>64</span>
+                                    <span>￥256.0</span>
+                                    <span class="fr">2.5折</span>
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#"><img src="./img/19.jpg" alt=""></a>
+                            <div>
+                                <a href="#">法国经典图画书“兔子帕西”系列15册，12开铜版纸全彩，从家庭生活的角度，讲述了五只性格迥异的小兔子奇妙有趣的成长经历，这套书对</a>
+                                <p class="clearfix">
+                                    团购价:￥
+                                    <span>58</span>
+                                    <span>￥180.0</span>
+                                    <span class="fr">3.2折</span>
+                                </p>
+                            </div>
+                        </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+        <!-- 包邮区 -->
+        <div id="mail">
+            <div class="mail con clearfix">
+                <!-- 标题 -->
+                <a href="#" class="clearfix">
+                    <span class="fl">包邮区 ></span>
+                    任选一本 整单包邮
+                    <span class="fr">查看更多>></span>
+                </a>
+                <!-- 内容区域 -->
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
             </div>
         </div>
     </div>
