--- a/src/index.html
+++ b/src/index.html
@@ -1451,8 +1451,250 @@
                             <img src="./img/57.jpg" alt="">
                         </a>
                     </div>
+                </div>        
+            </div>
+        </div>
+        <!-- 无标题区域 -->
+        <div id="note">
+            <div class="note con clearfix">
+                <!-- 导航区域 -->
+                <div class="note_ban clearfix">
+                    <ul class="clearfix fl">
+                        <li>
+                            <a href="#">艺术</a>
+                        </li>
+                        <li>
+                            <a href="#">美食</a>
+                        </li>
+                        <li>
+                            <a href="#">旅游</a>
+                        </li>
+                        <li>
+                            <a href="#">保健</a>
+                        </li>
+                        <li>
+                            <a href="#">孕产/育儿</a>
+                        </li>
+                        <li>
+                            <a href="#">外语</a>
+                        </li>
+                        <li>
+                            <a href="#">辅导</a>
+                        </li>
+                    </ul>
                 </div>
-                
+                <!-- 内容区域 -->
+                <div class="note_content">
+                    <!-- 中间的内容 -->
+                    <ul class="note_content_c fl clearfix">
+                        <li>
+                            <a href="#">
+                                <img src="./img/32.jpg" alt="">
+                            </a>
+                            <a href="#">牟氏庄园</a>
+                            <p>衣向东</p>
+                            <!-- 价格 -->
+                            <div class="clearfix">
+                                <span class="fl">￥9.9</span>
+                                <span class="fl">￥29.0</span>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./img/32.jpg" alt="">
+                            </a>
+                            <a href="#">牟氏庄园</a>
+                            <p>衣向东</p>
+                            <!-- 价格 -->
+                            <div class="clearfix">
+                                <span class="fl">￥9.9</span>
+                                <span class="fl">￥29.0</span>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./img/32.jpg" alt="">
+                            </a>
+                            <a href="#">牟氏庄园</a>
+                            <p>衣向东</p>
+                            <!-- 价格 -->
+                            <div class="clearfix">
+                                <span class="fl">￥9.9</span>
+                                <span class="fl">￥29.0</span>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./img/32.jpg" alt="">
+                            </a>
+                            <a href="#">牟氏庄园</a>
+                            <p>衣向东</p>
+                            <!-- 价格 -->
+                            <div class="clearfix">
+                                <span class="fl">￥9.9</span>
+                                <span class="fl">￥29.0</span>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img src="./img/32.jpg" alt="">
+                            </a>
+                            <a href="#">牟氏庄园</a>
+                            <p>衣向东</p>
+                            <!-- 价格 -->
+                            <div class="clearfix">
+                                <span class="fl">￥9.9</span>
+                                <span class="fl">￥29.0</span>
+                            </div>
+                        </li>
+                    </ul>
+                    <!-- 右边的内容 -->
+                    <div class="note_content_r fr clearfix">
+                        <div class="note_content_r1">
+                            <a href="#">
+                                <img src="./img/47.jpg" alt="">
+                            </a>
+                            <a href="#">世界十大中短篇小说家</a>
+                            <a href="#">世界十大中短篇小说家</a>
+                            <a href="#">世界十大中短篇小说家</a>
+                            <a href="#">世界十大中短篇小说家</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 出版社专区 -->
+        <div id="club">
+            <div class="club con clearfix">
+                <!-- 左边区域 -->
+                <div class="club_l fl clearfix">
+                    <!-- 标题栏 -->
+                    <h2>
+                        <a href="#">出版社专区 〉</a>
+                    </h2>
+                    <!-- 出版社类型区域 -->
+                    <div class="club_l_l fl">
+                        <div>
+                            <ul>
+                                <li>
+                                    <a href="#">人民文学出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">现在出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">中华书局<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">作家出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">海豚出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">广西师范大学出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">上海文艺出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">新世界出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">中信出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">吉林出版集团<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">人民出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">天津人民出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">云南人民出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">长江文艺出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">河北教育出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#">青岛出版社<i class="fr iconfont icon-you"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- 上下按钮 -->
+                        <p>
+                            <i class="iconfont fr icon-bottom"></i>
+                            <i class="iconfont fr icon-shang1"></i>
+                        </p>
+                    </div>
+                    <!-- 内容详情部分 -->
+                    <div class="club_l_r fr">
+                        <div>
+                            <a href="#">人民文学出版社</a>
+                            <p>人民文学出版社1951年3月成立于北京，系国家级专业文学出版机构，现为中国出版集团公司成员单位。该社着力组织出版社当代文学作品，中国当代作家的代表作大多由该社出版，出版物以高质量赢得广泛称赞，已形成了高品位，高质量的“人文版”图书系列，注重图书出版的系统性和系列化，力求较全面的反映中国及世界各国的优秀文学成果，被称赞“代表中国文学出版社的最高水平”。</p>
+                        </div>
+                        <!-- 商品部分 -->
+                        <ul class="club_l_r_content_c fl clearfix">
+                            <li>
+                                <a href="#">
+                                    <img src="./img/32.jpg" alt="">
+                                </a>
+                                <a href="#">牟氏庄园</a>
+                                <p>衣向东</p>
+                                <!-- 价格 -->
+                                <div class="clearfix">
+                                    <span class="fl">￥9.9</span>
+                                    <span class="fl">￥29.0</span>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="./img/32.jpg" alt="">
+                                </a>
+                                <a href="#">牟氏庄园</a>
+                                <p>衣向东</p>
+                                <!-- 价格 -->
+                                <div class="clearfix">
+                                    <span class="fl">￥9.9</span>
+                                    <span class="fl">￥29.0</span>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="./img/32.jpg" alt="">
+                                </a>
+                                <a href="#">牟氏庄园</a>
+                                <p>衣向东</p>
+                                <!-- 价格 -->
+                                <div class="clearfix">
+                                    <span class="fl">￥9.9</span>
+                                    <span class="fl">￥29.0</span>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <img src="./img/32.jpg" alt="">
+                                </a>
+                                <a href="#">牟氏庄园</a>
+                                <p>衣向东</p>
+                                <!-- 价格 -->
+                                <div class="clearfix">
+                                    <span class="fl">￥9.9</span>
+                                    <span class="fl">￥29.0</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- 右边的区域 -->
+                <div class="club_r fr">
+                    <p>人气作者</p>
+                    <div class="club_r1">
+                        <a href="#" class="club_ra1">丰子恺</a>
+                        <a href="#" class="club_ra2">丰子恺，浙江崇德人。我国现代画家、散文家、教育家和翻译家，卓有成就的文艺大师，被誉为“现代中国最像艺术家的艺术家”。</a>
+                        <a href="#" class="club_ra3"><img src="./img/55.jpg" alt=""></a>
+                        <a href="#" class="club_ra4">丰子恺品佛</a>
+                        <p class="clearfix"><span class="fl">￥16.2</span class="fl"><span>￥36.0</span></p>
+                    </div>
+                    <div class="club_r2">
+                        <a href="#">残雪</a>
+                        <a href="#">东野圭吾</a>
+                        <a href="#">莫言</a>
+                        <a href="#">沈石溪</a>
+                        <a href="#">汪曾祺</a>
+                        <a href="#">吕思勉</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 底部区域 -->
+        <div id="foot1">
+            <div class="foot1 con clearfix">
+                <a href="#">
+                    <img src="./img/foot1.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div id="foot2">
+            <div class="foot2 con clearfix">
+                <a href="#">
+                    <img src="./img/foot2.png" alt="">
+                </a>
             </div>
         </div>
     </div>
