--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>主页</title>
-    <link rel="stylesheet" type="text/css" href="../css/base.css">
-    <link rel="stylesheet" type="text/css" href="../css/header.css">
-    <link rel="stylesheet" type="text/css" href="../iconfont/iconfont.css">
-    <link rel="stylesheet" type="text/css" href="../lib/crxcarousel/crxcarousel.css">
     <script src="https://cdn.bootcss.com/jquery/3.0.0/jquery.js"></script>
-    <script src="../lib/crxcarousel/crxcarousel.js"></script>
     <script>
         jQuery(function($){
-            $(".logo_a3").crxCarousel({img:["../img/05.logo.png","../img/06.logo.png","../img/07.logo.png","../img/08.logo.png"],type:"vertical",width:170,height:50});
+            $(".logo_a3").crxCarousel({img:["./img/05.logo.png","./img/06.logo.png","./img/07.logo.png","./img/08.logo.png"],type:"vertical",width:170,height:50});
         })
     </script>
 </head>
@@ -24,9 +19,9 @@
             <div class="login_l fl">
                 <div class="login_l_p1 fl">欢迎光临中国图书网&emsp;请</div>
                 <div class="login_l_p2 fl">
-                    <a href="#" class="login_l_a1">登录</a>
-                    <img src="../img/login1.jpg" alt="" style="height:15px;" > 
-                    <a href="#" class="login_l_a1">注册</a>
+                    <a href="./html/login.html" class="login_l_a1">登录</a>
+                    <img src="./img/login1.jpg" alt="" style="height:15px;" > 
+                    <a href="./html/register.html" class="login_l_a1">注册</a>
                 </div>
             </div>
             <!-- 右边个人区 -->
@@ -78,7 +73,7 @@
     <!-- LOGO区域 -->
     <div id="logo">
         <div class="logo con clearfix">
-            <a href="#" class="logo_a1 fl" ><img src="../img/logo.png" alt=""></a>
+            <a href="#" class="logo_a1 fl" ><img src="./img/logo.png" alt=""></a>
             <!-- 中间的搜索区域 -->
             <div class="logo_d2 fl">
                 <form action="#">
