--- a/src/html/header.html
+++ b/src/html/header.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>主页</title>
     <script src="https://cdn.bootcss.com/jquery/3.0.0/jquery.js"></script>
+    <script src="./js/header1.js"></script>
     <script>
         jQuery(function($){
             $(".logo_a3").crxCarousel({img:["./img/05.logo.png","./img/06.logo.png","./img/07.logo.png","./img/08.logo.png"],type:"vertical",width:170,height:50});
