--- a/src/html/register.html
+++ b/src/html/register.html
@@ -6,31 +6,9 @@
     <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="../css/register1.css">
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../js/register.js"></script>
     <script>
-        $(function(){
-            var show_num = [];
-            draw(show_num);
-
-            $("#canvas").on('click',function(){
-                draw(show_num);
-            })
-            $(".btn").on('click',function(){
-                var val = $(".input-val").val().toLowerCase();
-                var num = show_num.join("");
-                if(val==''){
-                    alert('请输入验证码！');
-                }else if(val == num){
-                    alert('提交成功！');
-                    $(".input-val").val('');
-                    // draw(show_num);
-
-                }else{
-                    alert('验证码错误！请重新输入！');
-                    $(".input-val").val('');
-                    // draw(show_num);
-                }
-            })
-        })
+        
         //生成并渲染出验证码图形
         function draw(show_num) {
             var canvas_width=$('#canvas').width();
