--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./lib/crxcarousel/crxcarousel.css">
     <script src="https://cdn.bootcss.com/jquery/3.0.0/jquery.js"></script>
     <script src="./lib/crxcarousel/crxcarousel.js"></script>
+    <script src="./js/index1.js"></script>
     <script>
         jQuery(function($){
             $("#hh").load("./html/header.html");
@@ -619,28 +620,28 @@
                             <li><img src="./img/carousel_6.jpg" alt=""></li>
                         </ul>
                         <!-- 左右按钮 -->
-                        <div class="banner_btn clearfix">
+                        <div class="banner_btn clearfix" style="z-index:2">
                             <span class="fl"><</span>
                             <span class="fr">></span>
                         </div>
                         <!-- 下面显示栏 -->
-                        <div class="banner_show clearfix">
-                            <span>12元封顶折上再8折</span>
-                            <span>5年精选折上8折</span>
-                            <span>世界名著·多雷插图版</span>
-                            <span>知识的种子</span>
-                            <span>古希腊阿提卡演说家合辑</span>
-                            <span>牛津少年百科全书</span>
+                        <div class="banner_show clearfix" style="z-index:2">
+                            <span data_id="0">12元封顶折上再8折</span>
+                            <span data_id="1">5年精选折上8折</span>
+                            <span data_id="2">世界名著·多雷插图版</span>
+                            <span data_id="3">知识的种子</span>
+                            <span data_id="4">古希腊阿提卡演说家合辑</span>
+                            <span data_id="5">牛津少年百科全书</span>
                         </div>
                     </div>
                     <!-- 热书区域 -->
                     <div class="hotbook fl">
                         <!-- 导航区域 -->
                         <ul class="hot_ban clearfix">
-                            <li>新品特惠</li>
-                            <li>本周精选</li>
-                            <li>新书速递</li>
-                            <li>读者热评</li>
+                            <li date_id="0">新品特惠</li>
+                            <li date_id="1">本周精选</li>
+                            <li date_id="2">新书速递</li>
+                            <li date_id="3">读者热评</li>
                         </ul>
                         <!-- 显示区域 -->
                         <div class="hot_show">
@@ -898,16 +899,16 @@
                 <div class="wxbook_ban clearfix">
                     <a href="#" class="fl">文学图书 ></a>
                     <ul class="clearfix fl">
-                        <li>
+                        <li data_id="0">
                             <a href="#">小说</a>
                         </li>
-                        <li>
+                        <li data_id="1">
                             <a href="#">诗歌散文</a>
                         </li>
-                        <li>
+                        <li data_id="2">
                             <a href="#">悬疑推理</a>
                         </li>
-                        <li>
+                        <li data_id="3">
                             <a href="#">青春文学</a>
                         </li>
                     </ul>
@@ -1057,16 +1058,16 @@
                 <div class="skbook_ban clearfix">
                     <a href="#" class="fl">社科图书 ></a>
                     <ul class="clearfix fl">
-                        <li>
+                        <li data_id="3">
                             <a href="#">历史</a>
                         </li>
-                        <li>
+                        <li data_id="2">
                             <a href="#">传记</a>
                         </li>
-                        <li>
+                        <li data_id="1">
                             <a href="#">哲学宗教</a>
                         </li>
-                        <li>
+                        <li data_id="0">
                             <a href="#">政治军事</a>
                         </li>
                     </ul>
@@ -1216,13 +1217,13 @@
                 <div class="sebook_ban clearfix">
                     <a href="#" class="fl">少儿图书 ></a>
                     <ul class="clearfix fl">
-                        <li>
+                        <li data_id="1">
                             <a href="#">益智启蒙</a>
                         </li>
-                        <li>
+                        <li data_id="2">
                             <a href="#">儿童文学</a>
                         </li>
-                        <li>
+                        <li data_id="3">
                             <a href="#">精品绘本</a>
                         </li>
                     </ul>
@@ -1370,25 +1371,25 @@
                 <!-- 导航区域 -->
                 <div class="note_ban clearfix">
                     <ul class="clearfix fl">
-                        <li>
+                        <li data_id="0">
                             <a href="#">艺术</a>
                         </li>
-                        <li>
+                        <li data_id="1">
                             <a href="#">美食</a>
                         </li>
-                        <li>
+                        <li data_id="2">
                             <a href="#">旅游</a>
                         </li>
-                        <li>
+                        <li data_id="3">
                             <a href="#">保健</a>
                         </li>
-                        <li>
+                        <li data_id="4">
                             <a href="#">孕产/育儿</a>
                         </li>
-                        <li>
+                        <li data_id="5">
                             <a href="#">外语</a>
                         </li>
-                        <li>
+                        <li data_id="6">
                             <a href="#">辅导</a>
                         </li>
                     </ul>
@@ -1487,22 +1488,22 @@
                         <div>
                             <ul>
                                 <li>
-                                    <a href="#">人民文学出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">现在出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">中华书局<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">作家出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">海豚出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">广西师范大学出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">上海文艺出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">新世界出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">中信出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">吉林出版集团<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">人民出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">天津人民出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">云南人民出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">长江文艺出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">河北教育出版社<i class="fr iconfont icon-you"></i></a>
-                                    <a href="#">青岛出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="0">人民文学出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="1">现在出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="2">中华书局<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="3">作家出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="4">海豚出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="5">广西师范大学出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="6">上海文艺出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="7">新世界出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="8">中信出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="9">吉林出版集团<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="10">人民出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="11">天津人民出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="12">云南人民出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="13">长江文艺出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="14">河北教育出版社<i class="fr iconfont icon-you"></i></a>
+                                    <a href="#" data_id="15">青岛出版社<i class="fr iconfont icon-you"></i></a>
                                 </li>
                             </ul>
                         </div>
