--- a/src/html/gouwuche.html
+++ b/src/html/gouwuche.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/gouwuche1.css">
     <script src="https://cdn.bootcss.com/jquery/3.0.0/jquery.js"></script>
     <script src="../lib/crxcarousel/crxcarousel.js"></script>
+    <script src="../js/gouwuche1.js"></script>
     <base href="../">
     <script>
         jQuery(function($){
@@ -63,9 +64,9 @@
                         <span class="fl">￥50</span>
                         <span class="fl">￥15</span>
                         <p class="clearfix fl">
-                            1
                             <span class="fl">-</span>
                             <span class="fr">+</span>
+                            <span class="fl">1</span>
                         </p>
                         <span class="fl">￥15.0</span>
                         <p class="fl">
@@ -122,6 +123,21 @@
                     <li></li>
                     <li></li>
                 </ul>
+            </div>
+        </div>
+        <!-- 底部区域 -->
+        <div id="foot1">
+            <div class="foot1 con clearfix">
+                <a href="#">
+                    <img src="./img/foot1.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div id="foot2">
+            <div class="foot2 con clearfix">
+                <a href="#">
+                    <img src="./img/foot2.png" alt="">
+                </a>
             </div>
         </div>
     </div>
