--- a/src/html/header.html
+++ b/src/html/header.html
@@ -27,7 +27,7 @@
             </div>
             <!-- 右边个人区 -->
             <ul class="login_r fr">
-                <li><a href="#">购物车</a></li>
+                <li><a href="./html/gouwuche.html">购物车</a></li>
                 <li><a href="#">我的订单</a></li>
                 <!-- 我的账户 -->
                 <li class="login_r_li login_r_li3">
