--- a/src/html/list.html
+++ b/src/html/list.html
@@ -675,6 +675,7 @@
                         <button>立即购买</button>
                     </li>
                 </ul>
+                <!-- <span></span> -->
             </div>
         </div>
         <!-- 本站常销区域 -->
