--- a/src/html/details.html
+++ b/src/html/details.html
@@ -699,12 +699,12 @@
                     </div>
                     <!-- 购物车区域 -->
                     <div class="big_c3 clearfix">
-                        <a href="#" class="fl">
+                        <a href="javascript:;" class="fl">
                             <i class="iconfont icon-gouwuche"></i>
                             加入购物车
                         </a>
-                        <a href="#" class="fl">收藏</a>
-                        <a href="#" class="fl">运费6元，满69元免运费</a>
+                        <a href="javascript:;" class="fl">收藏</a>
+                        <a href="javascript:;" class="fl">运费6元，满69元免运费</a>
                     </div>
                     <!-- 提示区域 -->
                     <div class="big_c4">
