--- a/src/html/register.html
+++ b/src/html/register.html
@@ -94,8 +94,8 @@
                     </p>
                 </h2>
                 <form action="#">
-                    <label for="uname">手机号码 ：</label><input type="text" id="uname" placeholder="请输入您的常用手机号码"><br>
-                    <p class="p1">请输入常用手机号</p>
+                    <label for="uname">用户名 ：</label><input type="text" id="uname" placeholder="请输入您的用户名"><br>
+                    <p class="p1">请输入用户名</p>
                     <label for="upwd">设置密码 ：</label><input type="password" id="upwd" placeholder="请输入密码"><br>
                     <p class="p2">请设置6到16位登录密码</p>
                     <label for="uupwd">确认密码 ：</label><input type="password" id="uupwd" placeholder="请再次输入密码"><br>
